# recipes

./: .coveragerc  .directory  .dockerignore  .env.secret.template  .env.template  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yml  404.html  CONTRIBUTERS.md  DEV_NOTES.txt  Dockerfile  Dockerfile-raspi  Dockerfile.branch-test  Dockerfile.nginx  Dockerfile.txt  IMPLEMENTATION_NOTES.md  LICENSE.md  NOTES.txt  README.he.md  README.md  ROADMAP.md  SECURITY.md  babel.config.js  boot.sh  check_syntax.py  cookbook_serializer.py  db.sqlite3  docker-compose.override.yml.template  docker-compose.yaml  docker-compose.yml  dvp_todo.md  generate_api_client.py  index.html  jest.config.js  make_compile_messages.py  (+21 more)
.claude/plans/: food-management-enhancement.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  doc_issue.yml  feature_request.yml  help-request.md  help-request.md.bak  help_request.yml  url_import.md.bak  website_import.yml
.github/workflows/: auto-merge-recipe-scrapers.yml  auto-update-recipe-scrapers.yml  build-branch-test.yml  build-docker-open-data.yml  build-docker.yml  ci.yml  codeql-analysis.yml  create-upstream-pr.yml  dependabot-automerge.yml  (+21 more)
.openapi-generator/: FILES
Recipies/: secret_settings.template  settings.py  urls.py  wsgi.py
apis/: ApiApi.ts  ApiImportOpenDataApi.ts  ApiTokenAuthApi.ts
contribute/: index.html
cookbook/: admin.py  api.py  apps.py  filters.py  forms.py  managers.py  models.py  querysets.py  schemas.py  serializer.py  signals.py  tables.py  urls.py  version_info.py  views.py
docs/: CNAME  WSL-Docker-Installation.md  contribute.md  faq.md  index.md
faq/: index.html
http.d/: Recipes.conf  Recipes.conf.template
models/: AccessToken.ts  AuthToken.ts  AutoMealPlan.ts  Automation.ts  BookmarkletImport.ts  BookmarkletImportList.ts  ConnectorConfigConfig.ts  CookLog.ts  CustomFilter.ts  DefaultPageEnum.ts  ExportLog.ts  Food.ts  FoodInheritField.ts  FoodPropertiesFoodUnit.ts  FoodRecipe.ts  FoodShoppingUpdate.ts  FoodSimple.ts  FoodSupermarketCategory.ts  Group.ts  ImportLog.ts  Ingredient.ts  IngredientFood.ts  InviteLink.ts  Keyword.ts  KeywordLabel.ts  MealPlan.ts  MealPlanRecipe.ts  MealType.ts  MethodEnum.ts  NutritionInformation.ts  PaginatedAutomationList.ts  PaginatedBookmarkletImportListList.ts  PaginatedCookLogList.ts  PaginatedCustomFilterList.ts  PaginatedExportLogList.ts  PaginatedFoodList.ts  PaginatedImportLogList.ts  PaginatedIngredientList.ts  PaginatedInviteLinkList.ts  PaginatedKeywordList.ts  (+89 more)
recipes/: celery.py  middleware.py  secret_settings.py  secret_settings.template  settings.py  settings.py.template  test_settings.py  urls.py  version.py  wsgi.py
scripts/: generate_api_client.py  make_compile_messages.py
search/: search_index.json
stylesheets/: extra.css
tests/: cucumber.conf.js  package-lock.json  package.json  pytest.xml  tests.html
translations/: README.pt-br.md
vue/: .prettierrc  babel.config.js  babel.config.js.c  package-lock.json  package.json  tsconfig.json  vue.config.js  webpack-stats.json
vue3/: env.d.ts  openapitools.json  package-lock.json  package.json  playwright.config.ts  runtime.ts  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
(+2435 files in other folders)
